Add UI components for button and switch with configuration support. Update app layout to include card item component and enhance styles.

--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": ">=19.0.0",
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@spartan-ng/brain": "0.0.1-alpha.478",
     "@tailwindcss/postcss": "^4.1.10",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.10",
@@ -28,6 +32,7 @@
     "@angular/build": "^20.0.2",
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.0",
+    "@spartan-ng/cli": "0.0.1-alpha.478",
     "@testing-library/angular": "17.4.0",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.4.8",
@@ -36,6 +41,8 @@
     "@types/node": "^24.0.4",
     "jest": "^30.0.3",
     "jest-preset-angular": "^14.6.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.8.2",
     "zone.js": "^0.15.1"
   }
