--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.4",
+    "angular-in-memory-web-api": "^0.20.0",
     "jest": "^30.0.3",
     "jest-preset-angular": "^14.6.0",
     "tailwind-merge": "^2.2.0",
