Update Jest setup configuration and modify GitHub Actions deploy message format

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,4 +44,4 @@ jobs:
           BRANCH: build
           FOLDER: dist
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MESSAGE: 'Build: ({sha}) {msg}' # The commit message
+          MESSAGE: "Build: ({sha}) {msg}" # The commit message
