--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/node": "^24.0.4",
     "angular-in-memory-web-api": "^0.20.0",
     "jest": "^30.0.3",
-    "jest-preset-angular": "^14.6.0",
+    "jest-preset-angular": "15.0.0-next.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.8.2",
