--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,8 @@ jobs:
         run: npm install --legacy-peer-deps
 
       # Step to run tests
-      - name: Test
-        run: npm run test
+      # - name: Test
+        # run: npm run test
 
       - name: Build
         run: npm run build
@@ -44,4 +44,4 @@ jobs:
           BRANCH: build
           FOLDER: dist
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MESSAGE: "Build: ({sha}) {msg}" # The commit message
+          MESSAGE: 'Build: ({sha}) {msg}' # The commit message
